--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
 	<div class="content-box">
-        	<h2> Home </h2>
+        	<h2> About Me </h2>
         	<p>Lorem Ipsum </p>
     	</div>
 </body>
