--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
 <body>
 	<nav class="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://awiens23.github.io/awiens23/mainpage.html">Home</a></li>
+                <li><a href="https://awiens23.github.io/awiens23/about.html">About</a></li>
+                <li><a href="https://awiens23.github.io/awiens23/contact.html">Contact</a></li>
             </ul>
         </nav>
 	<div class="content-box">
