--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         	<h2> Contact </h2>
         	<p> Email: addisonmalcolm@icloud.com 
 		<br> Phone Number: +1 (306) 540-9009 
-		<br> LinkedIn: <a href"www.linkedin.com/in/addison-wiens-8a478a259"> Addison Wiens </a> </p>
+		<br> LinkedIn: <a href="www.linkedin.com/in/addison-wiens-8a478a259"> Addison Wiens </a> </p>
     	</div>
 </body>
 </html>
