--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title Section with Border</title>
     <link rel="stylesheet" href="Style.css">
+</head>
+<body>
     <div class="title-section">
         <h1>Addison Wiens</h1>
     </div>
-</head>
-<body>
-	<nav class="navbar">
-            <ul>
-                <li><a href="https://awiens23.github.io/awiens23/mainpage.html">Home</a></li>
-                <li><a href="https://awiens23.github.io/awiens23/about.html">About</a></li>
-                <li><a href="https://awiens23.github.io/awiens23/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-	<div class="content-box">
-        	<h2> Contact </h2>
-        	<p> Email: addisonmalcolm@icloud.com 
-		<br> Phone Number: +1 (306) 540-9009 
-		<br> LinkedIn: <a href="www.linkedin.com/in/addison-wiens-8a478a259"> Addison Wiens </a> </p>
-    	</div>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="https://awiens23.github.io/awiens23/mainpage.html">Home</a></li>
+            <li><a href="https://awiens23.github.io/awiens23/about.html">About</a></li>
+            <li><a href="https://awiens23.github.io/awiens23/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="content-box">
+        <h2>Contact</h2>
+        <p>Email: addisonmalcolm@icloud.com <br> 
+           Phone Number: +1 (306) 540-9009 <br> 
+           LinkedIn: <a href="https://www.linkedin.com/in/addison-wiens-8a478a259" target="_blank">Addison Wiens</a>
+        </p>
+    </div>
 </body>
 </html>
