--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Section with Border</title>
+    <title>About</title>
     <link rel="stylesheet" href="Style.css">
     <div class="title-section">
         <h1>Addison Wiens</h1>
