--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </nav>
 	<div class="content-box">
         	<h2> About Me </h2>
-        	<p>Lorem Ipsum </p>
+        	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Addison Wiens</a></p>
     	</div>
 </body>
 </html>
