--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 	<div class="content-box">
         	<h2> About Me </h2>
         	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Addison Wiens</a></p>
+		<img src="path-to-your-profile-picture.jpg" alt="Profile Picture" class="profile-picture">
     	</div>
 </body>
 </html>
