--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 	<div class="content-box">
         	<h2> About Me </h2>
         	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Addison Wiens</a></p>
-		<img src="path-to-your-profile-picture.jpg" alt="Profile Picture" class="profile-picture">
+		<img src="https://media.licdn.com/dms/image/v2/D4E03AQFDUMpjNoSHJw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1726951051433?e=1732752000&v=beta&t=R0BYIjwKCvMFeeeyGqD8-Y-4Djz2m4BvfVSYg24avpA" alt="Profile Picture" class="profile-picture">
     	</div>
 </body>
 </html>
