--- a/mainpage.html
+++ b/mainpage.html
@@ -19,7 +19,12 @@
         </nav>
 	<div class="content-box">
         	<h2> Home </h2>
-        	<p>Lorem Ipsum </p>
+        	<p> Lorem ipsum </p>
+		<br>
+		<h2> My Projects </h2>
+		<h3> Undergraduate First Aid Iniative at Queen's </h3>
+		<p> Lorem ipsum </p>
+	
     	</div>
 </body>
 </html>
