--- a/mainpage.html
+++ b/mainpage.html
@@ -21,10 +21,19 @@
         	<h2> Home </h2>
         	<p> Lorem ipsum </p>
 		<br>
-		<h2> My Projects </h2>
+		<h2> Current Projects </h2>
 		<h3> Undergraduate First Aid Iniative at Queen's </h3>
+		<h4> Co-Founder / Chairman </h4>
+		<p> After a tragic accident this summer, I realized how quick accidents can happen, and how important first aid training is.
+		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accesible first aid training. We are
+		currently working hosting the first clinic on campus. </p>
+		<h3> Queen's Relectric Design Team </h3>
+                <h4> Interior Subteam - Member </h4>
 		<p> Lorem ipsum </p>
-	
+		<br>
+		<h2> Past Projects </h2>
+		<h3> APSC 200 Design Project </h3>
+		<p> Lorem ipsum </p>
     	</div>
 </body>
 </html>
