--- a/mainpage.html
+++ b/mainpage.html
@@ -25,15 +25,21 @@
 		<h3> Undergraduate First Aid Iniative at Queen's </h3>
 		<h4> Co-Founder / Chairman </h4>
 		<p> After a tragic accident this summer, I realized how quick accidents can happen, and how important first aid training is.
-		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accesible first aid training. We are
+		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
 		currently working hosting the first clinic on campus. </p>
 		<h3> Queen's Relectric Design Team </h3>
                 <h4> Interior Subteam - Member </h4>
-		<p> Lorem ipsum </p>
+		<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
+		fully electric. Members of the Interior Subteam worked on various projects,
+		including modeling a new dashboard, programming a custom head unit, wiring
+		sensors, and reupholstering the seats. </p>
 		<br>
 		<h2> Past Projects </h2>
 		<h3> APSC 200 Design Project </h3>
-		<p> Lorem ipsum </p>
+		<h4> Part One </h4>
+		<p> The first project was based on planning a manned mission to Mars, where the necessary propellant to travel home is created on planet. The team explored two methods of 		creating propellant; the first used carbon dioxide, sunlight and frozen water to grow cyanobacteria that produce 2,3-Butanediol, while the second used capillarly-drawn 		electrolysis to seperate H<sub>2</sub> and O<sub>2</sub>. My main role on the team was to conduct the economic analysis of the trip, including everything from launch to 		living on Mars to returning home. This involved detailed research, budgeting, and iteration throughout the project. </p>
+		<h4> Part Two </h4>
+		<p> The second project was based on redesigning sports equipment to be more gender-inclusive. The goal of the project was to model a 3D lattice to absorb shock, as well as 		conducting Finite Element Analysis of the lattice. I also conducted economic analysis of this project, including material sourcing and pricing. </p> 
     	</div>
 </body>
 </html>
