--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
 		<img src="https://media.licdn.com/dms/image/v2/D4E03AQFDUMpjNoSHJw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1726951051433?e=1732752000&v=beta&t=R0BYIjwKCvMFeeeyGqD8-Y-4Djz2m4BvfVSYg24avpA" alt="Profile Picture" class="profile-picture">        	
 		<h2> About Me </h2>
 		<p> Third Year Mechanical Engineering Student at Queen's University, interested in design and problem solving.</p>
+		<p> My Resume: <a href="Addison Wiens Resume 2024.pdf">Addison Wiens</a></p>
         	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Addison Wiens</a></p>
     	</div>
 </body>
