--- a/mainpage.html
+++ b/mainpage.html
@@ -24,22 +24,35 @@
 		<h2> Current Projects </h2>
 		<h3> Undergraduate First Aid Iniative at Queen's </h3>
 		<h4> Co-Founder / Chairman </h4>
-		<p> After a tragic accident this summer, I realized how quick accidents can happen, and how important first aid training is.
+		<p> After a tragic incident this summer, I realized how fast accidents can happen, and how important first aid training is.
 		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
 		currently working hosting the first clinic on campus. </p>
+                <img src="UFAIQ Logo" alt="UFAIQ Logo" class="project-picture">
 		<h3> Queen's Relectric Design Team </h3>
                 <h4> Interior Subteam - Member </h4>
 		<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
 		fully electric. Members of the Interior Subteam worked on various projects,
 		including modeling a new dashboard, programming a custom head unit, wiring
 		sensors, and reupholstering the seats. </p>
+		<img src="Jeep Picture" alt="Relectric Jeep" class="project-picture"> 
 		<br>
 		<h2> Past Projects </h2>
 		<h3> APSC 200 Design Project </h3>
 		<h4> Part One </h4>
-		<p> The first project was based on planning a manned mission to Mars, where the necessary propellant to travel home is created on planet. The team explored two methods of 		creating propellant; the first used carbon dioxide, sunlight and frozen water to grow cyanobacteria that produce 2,3-Butanediol, while the second used capillarly-drawn 		electrolysis to seperate H<sub>2</sub> and O<sub>2</sub>. My main role on the team was to conduct the economic analysis of the trip, including everything from launch to 		living on Mars to returning home. This involved detailed research, budgeting, and iteration throughout the project. </p>
+		<p> The first project was a 6 week theoretical exercise based on planning a manned mission to Mars. The main constraint was 
+		all fuel would be consumed during transit, so the team had to find a way to generate fuel on planet. The first proposed solution
+		was to use carbon dioxide, sunlight and Martian ice to grow cyanobacteria, which would in turn would create O<sub>2</sub> to feed
+		E. Coli bacteria that would produce 2,3-Butanediol to use as fuel. The second solution again used Martian ice, which is melted and
+		fed into a capillary-drawn electrolyis system to seperate H<sub>2</sub> and O<sub>2</sub>. My role in the project was to plan
+		the logistics and conduct the economic analysis. This involved extensive research into everything needed to survive on Mars, 
+		creating a timeline from launch to return, and creating an intensive budget.  </p>
 		<h4> Part Two </h4>
-		<p> The second project was based on redesigning sports equipment to be more gender-inclusive. The goal of the project was to model a 3D lattice to absorb shock, as well as 		conducting Finite Element Analysis of the lattice. I also conducted economic analysis of this project, including material sourcing and pricing. </p> 
+		<p> This project centered around identifying a current inclusivity problem in today's sports industry and solving it. 
+		The team chose to redesign an archer's arm guard to be inclusive to any body type or gender. The design portion of the 
+		project included 3D modelling a lattice to best absorb shock, and then conducting Finite Element Analysis. For this project,
+		my role was to help model and conduct the FEA using SolidWorks, as well as conduct the economic analysis of the project. This 
+		involved market research, product design, material sourcing, and pricing the project. </p>  
+		<img src="Lattice FEA" alt="Finite Element Analysis of the Lattice" class="project-picture">
     	</div>
 </body>
 </html>
