--- a/mainpage.html
+++ b/mainpage.html
@@ -27,14 +27,14 @@
 		<p> After a tragic incident this summer, I realized how fast accidents can happen, and how important first aid training is.
 		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
 		currently working hosting the first clinic on campus. </p>
-                <img src="UFAIQ Logo" alt="UFAIQ Logo" class="project-picture">
+                <img src="UFAIQ Logo.png" alt="UFAIQ Logo" class="project-picture">
 		<h3> Queen's Relectric Design Team </h3>
                 <h4> Interior Subteam - Member </h4>
 		<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
 		fully electric. Members of the Interior Subteam worked on various projects,
 		including modeling a new dashboard, programming a custom head unit, wiring
 		sensors, and reupholstering the seats. </p>
-		<img src="Jeep Picture" alt="Relectric Jeep" class="project-picture"> 
+		<img src="Jeep Picture.jpg" alt="Relectric Jeep" class="project-picture"> 
 		<br>
 		<h2> Past Projects </h2>
 		<h3> APSC 200 Design Project </h3>
@@ -52,7 +52,13 @@
 		project included 3D modelling a lattice to best absorb shock, and then conducting Finite Element Analysis. For this project,
 		my role was to help model and conduct the FEA using SolidWorks, as well as conduct the economic analysis of the project. This 
 		involved market research, product design, material sourcing, and pricing the project. </p>  
-		<img src="Lattice FEA" alt="Finite Element Analysis of the Lattice" class="project-picture">
+		<img src="Lattice FEA.png" alt="Finite Element Analysis of the Lattice" class="project-picture">
+		<br>
+		<h3> APSC 103 Design Project </h3>
+		<p> For this project, the team was hired by the client, the Tea Room, to create a greenhouse that could operate year-round to provide
+		the cafe with fresh produce. Given numerous constraints and a limited budget, the team designed a vertical greenhouse consisting of 
+		3 tiers, a rainwater collection and watering system, UV lights, a heating system, a solar generator, and insulated walls. A model 
+		was also assembled to showcase the design to the client. </p>
     	</div>
 </body>
 </html>
