--- a/mainpage.html
+++ b/mainpage.html
@@ -27,7 +27,7 @@
 		<p> After a tragic incident this summer, I realized how fast accidents can happen, and how important first aid training is.
 		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
 		currently working hosting the first clinic on campus. </p>
-                <img src="https://awiens23.github.io/awiens23/UFAIQ%20Logo.png" alt="UFAIQ Logo" class="project-picture">
+                <img src="UFAIQ%20Logo.png" alt="UFAIQ Logo" class="project-picture">
 		<h3> Queen's Relectric Design Team </h3>
                 <h4> Interior Subteam - Member </h4>
 		<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
@@ -62,6 +62,10 @@
 		I researched and modelled which vegetables should be grown, and which strains would work best. This also included implementing a complimentary
 		planting strategy to aid in growth and yield. With the product itself, I 3D modelled the greenhouse in SolidWorks, and helped to create the 
 		physical model in the Queen's ILC workshop. </p>
+		<div class="image-container">
+    			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
+    			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
+		</div>
     	</div>
 </body>
 </html>
