--- a/mainpage.html
+++ b/mainpage.html
@@ -18,54 +18,61 @@
             </ul>
         </nav>
 	<div class="content-box">
-        	<h2> Home </h2>
-        	<p> Lorem ipsum </p>
-		<br>
-		<h2> Current Projects </h2>
-		<h3> Undergraduate First Aid Iniative at Queen's </h3>
-		<h4> Co-Founder / Chairman </h4>
-		<p> After a tragic incident this summer, I realized how fast accidents can happen, and how important first aid training is.
-		Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
-		currently working hosting the first clinic on campus. </p>
-                <img src="UFAIQ%20Logo.png" alt="UFAIQ Logo" class="project-picture">
-		<h3> Queen's Relectric Design Team </h3>
-                <h4> Interior Subteam - Member </h4>
-		<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
-		fully electric. Members of the Interior Subteam worked on various projects,
-		including modeling a new dashboard, programming a custom head unit, wiring
-		sensors, and reupholstering the seats. </p>
-		<img src="Jeep Picture.jpg" alt="Relectric Jeep" class="project-picture"> 
-		<br>
-		<h2> Past Projects </h2>
-		<h3> APSC 200 Design Project </h3>
-		<h4> Part One </h4>
-		<p> The first project was a 6 week theoretical exercise based on planning a manned mission to Mars. The main constraint was 
-		all fuel would be consumed during transit, so the team had to find a way to generate fuel on planet. The first proposed solution
-		was to use carbon dioxide, sunlight and Martian ice to grow cyanobacteria, which would in turn would create O<sub>2</sub> to feed
-		E. Coli bacteria that would produce 2,3-Butanediol to use as fuel. The second solution again used Martian ice, which is melted and
-		fed into a capillary-drawn electrolyis system to seperate H<sub>2</sub> and O<sub>2</sub>. My role in the project was to plan
-		the logistics and conduct the economic analysis. This involved extensive research into everything needed to survive on Mars, 
-		creating a timeline from launch to return, and creating an intensive budget.  </p>
-		<h4> Part Two </h4>
-		<p> This project centered around identifying a current inclusivity problem in today's sports industry and solving it. 
-		The team chose to redesign an archer's arm guard to be inclusive to any body type or gender. The design portion of the 
-		project included 3D modelling a lattice to best absorb shock, and then conducting Finite Element Analysis. For this project,
-		my role was to help model and conduct the FEA using SolidWorks, as well as conduct the economic analysis of the project. This 
-		involved market research, product design, material sourcing, and pricing the project. </p>  
-		<img src="Lattice FEA.png" alt="Finite Element Analysis of the Lattice" class="project-picture">
-		<br>
-		<h3> APSC 103 Design Project </h3>
-		<p> For this project, the team was hired by the client, the Tea Room, to create a greenhouse that could operate year-round to provide
-		the cafe with fresh produce. Given numerous constraints and a limited budget, the team designed a vertical greenhouse consisting of 
-		3 tiers, a rainwater collection and watering system, UV lights, a heating system, a solar generator, and insulated walls. A model 
-		was also assembled to showcase the design to the client. My role in this this project was multifaceted; for the theory side of the project, 
-		I researched and modelled which vegetables should be grown, and which strains would work best. This also included implementing a complimentary
-		planting strategy to aid in growth and yield. With the product itself, I 3D modelled the greenhouse in SolidWorks, and helped to create the 
-		physical model in the Queen's ILC workshop. </p>
-		<div class="image-container">
-    			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
-    			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
-		</div>
+    		<div class="text-column">
+        		<h2> Home </h2>
+        		<p> Lorem ipsum </p>
+        		<h2> Home </h2>
+        		<p> Lorem ipsum </p>
+			<br>
+			<h2> Current Projects </h2>
+			<h3> Undergraduate First Aid Iniative at Queen's </h3>
+			<h4> Co-Founder / Chairman </h4>
+			<p> After a tragic incident this summer, I realized how fast accidents can happen, and how important first aid training is.
+			Upon returning to Queen's, a friend and I started UFAIQ to provide Queen's students with accessible first aid training. We are
+			currently working hosting the first clinic on campus. </p>
+
+			<h3> Queen's Relectric Design Team </h3>
+              	  	<h4> Interior Subteam - Member </h4>
+			<p> The Relectric team is currently working on converting a gas Jeep Wrangler to be
+			fully electric. Members of the Interior Subteam worked on various projects,
+			including modeling a new dashboard, programming a custom head unit, wiring
+			sensors, and reupholstering the seats. </p>
+			<br>
+			<h2> Past Projects </h2>
+			<h3> APSC 200 Design Project </h3>
+			<h4> Part One </h4>
+			<p> The first project was a 6 week theoretical exercise based on planning a manned mission to Mars. The main constraint was 
+			all fuel would be consumed during transit, so the team had to find a way to generate fuel on planet. The first proposed solution
+			was to use carbon dioxide, sunlight and Martian ice to grow cyanobacteria, which would in turn would create O<sub>2</sub> to feed
+			E. Coli bacteria that would produce 2,3-Butanediol to use as fuel. The second solution again used Martian ice, which is melted and
+			fed into a capillary-drawn electrolyis system to seperate H<sub>2</sub> and O<sub>2</sub>. My role in the project was to plan
+			the logistics and conduct the economic analysis. This involved extensive research into everything needed to survive on Mars, 
+			creating a timeline from launch to return, and creating an intensive budget.  </p>
+			<h4> Part Two </h4>
+			<p> This project centered around identifying a current inclusivity problem in today's sports industry and solving it. 
+			The team chose to redesign an archer's arm guard to be inclusive to any body type or gender. The design portion of the 
+			project included 3D modelling a lattice to best absorb shock, and then conducting Finite Element Analysis. For this project,
+			my role was to help model and conduct the FEA using SolidWorks, as well as conduct the economic analysis of the project. This 
+			involved market research, product design, material sourcing, and pricing the project. </p>  
+			<br>
+			<h3> APSC 103 Design Project </h3>
+			<p> For this project, the team was hired by the client, the Tea Room, to create a greenhouse that could operate year-round to provide
+			the cafe with fresh produce. Given numerous constraints and a limited budget, the team designed a vertical greenhouse consisting of 
+			3 tiers, a rainwater collection and watering system, UV lights, a heating system, a solar generator, and insulated walls. A model 
+			was also assembled to showcase the design to the client. My role in this this project was multifaceted; for the theory side of the project, 
+			I researched and modelled which vegetables should be grown, and which strains would work best. This also included implementing a complimentary
+			planting strategy to aid in growth and yield. With the product itself, I 3D modelled the greenhouse in SolidWorks, and helped to create the 
+			physical model in the Queen's ILC workshop. </p>
+    		</div>
+		<div class="image-column">
+        		<img src="UFAIQ%20Logo.png" alt="UFAIQ Logo" class="project-picture">
+        		<img src="Jeep Picture.jpg" alt="Relectric Jeep" class="project-picture">
+        		<img src="Lattice FEA.png" alt="Finite Element Analysis of the Lattice" class="project-picture">
+        		<div class="image-container">
+            			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
+            			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
+        		</div>
+   		</div>
     	</div>
 </body>
 </html>
