--- a/mainpage.html
+++ b/mainpage.html
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 		<div class="row">
-        		<div class="text-column">
+        		<div class="image-column">
             			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
             			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
         		</div>
