--- a/mainpage.html
+++ b/mainpage.html
@@ -21,7 +21,7 @@
 		<div class="row">
         		<div class="text-column">
             			<h2> Home </h2>
-            			<p> Lorem ipsum </p>
+            			<p> Displayed below are a collection of projects and teams I've worked on/with over my time at Queen's. </p>
         		</div>
 		</div>
 		
