--- a/mainpage.html
+++ b/mainpage.html
@@ -93,7 +93,7 @@
         		<div class="image-column">
 			</div>
 		</div>
-        	<div class="image-column">
+        	<div class="image-container">
             			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
             			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
         	</div>
