--- a/mainpage.html
+++ b/mainpage.html
@@ -68,14 +68,13 @@
 			<div class="image-column">
 				<img src="UFAIQ%20Logo.png" alt="UFAIQ Logo" class="project-picture">
 				<img src="Jeep Picture.jpg" alt="Relectric Jeep" class="project-picture">
-				<br>
 				<img src="Lattice FEA.png" alt="Finite Element Analysis of the Lattice" class="project-picture">
 			</div>
 
 		</div>
         	<div class="image-container">
-            			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
-            			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
+            			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side:first-child">
+            			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side:last-child">
         	</div>
     	</div>
 </body>
