--- a/mainpage.html
+++ b/mainpage.html
@@ -73,8 +73,8 @@
 
 		</div>
         	<div class="image-container">
-            			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side">
-            			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side">
+            			<img src="Greenhouse.png" alt="3D Model of the Greenhouse" class="side-by-side-1">
+            			<img src="model.jpg" alt="Constructed Model of the Greenhouse" class="side-by-side-2">
         	</div>
     	</div>
 </body>
