--- a/about.html
+++ b/about.html
@@ -20,9 +20,13 @@
 	<div class="content-box">
 		<img src="https://media.licdn.com/dms/image/v2/D4E03AQFDUMpjNoSHJw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1726951051433?e=1732752000&v=beta&t=R0BYIjwKCvMFeeeyGqD8-Y-4Djz2m4BvfVSYg24avpA" alt="Profile Picture" class="profile-picture">        	
 		<h2> About Me </h2>
-		<p> Third Year Mechanical Engineering Student at Queen's University, interested in design and problem solving.</p>
+		<p> I'm a third year student at Queen's University, currently studying Mechanical Engineering, as well as a Certificate in Business. Please check out my resume, linked below. 		</p>
 		<p> My Resume: <a href="Addison Wiens Resume 2024.pdf">Addison Wiens</a></p>
-        	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Addison Wiens</a></p>
+		<p> One of my favourite hobbies is working on my cardio. I'm currently working to improve on my swimming abilities, as well as advance my distance running. 
+		This May, I had the pleasure of participating in the Million Reasons Run with some friends, which helps raise money for Children's Hospitals all across Canada. 
+		The goal was to run as much as possible during the month of May, and I contributed 144km to the team. My next goal is to race in a triathalon, but I'll have 
+		to work on my cycling before that happens. </p>
+        	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Running and Swimming</a></p>
     	</div>
 </body>
 </html>
