--- a/about.html
+++ b/about.html
@@ -27,6 +27,14 @@
 		The goal was to run as much as possible during the month of May, and I contributed 144km to the team. My next goal is to race in a triathalon, but I'll have 
 		to work on my cycling before that happens. </p>
         	<p> My Strava: <a href="https://www.strava.com/athletes/134237750">Running and Swimming</a></p>
+		<p> Another one of my favourite things is baking, which I try to do at least once a week. Shown below are some of my favourite creations.
+		
+		<div class="baking-row">
+			<img src="Brownies1.jpg" alt="Brownies" class="project-picture">
+			<img src="Brownies2.jpg" alt="Brownies" class="project-picture">
+			<img src="Brownies3.jpg" alt="Brownies" class="project-picture">
+			<p> Brownies </p>
+		</div>
     	</div>
 </body>
 </html>
