--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
 		<p> Another one of my favourite things is baking, which I try to do at least once a week. Shown below are some of my favourite creations.
 		
 		<div class="baking-row">
-			<img src="Brownies1.jpg" alt="Brownies" class="project-picture">
-			<img src="Brownies2.jpg" alt="Brownies" class="project-picture">
-			<img src="Brownies3.jpg" alt="Brownies" class="project-picture">
-			<p> Brownies </p>
+			<img src="brownies1.jpg" alt="Brownies" class="project-picture">
+			<img src="brownies2.jpg" alt="Brownies" class="project-picture">
+			<img src="brownies3.jpg" alt="Brownies" class="project-picture">
+			<br> <p> Brownies </p>
 		</div>
     	</div>
 </body>
