--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
 		<p> Another one of my favourite things is baking, which I try to do at least once a week. Shown below are some of my favourite creations.
 		
 		<div class="baking-row">
+			<img src="Jeep Picture.jpg" alt="Relectric Jeep" class="project-picture">
 			<img src="brownies1.jpg" alt="Brownies" class="project-picture">
 			<img src="brownies2.jpg" alt="Brownies" class="project-picture">
 			<img src="brownies3.jpg" alt="Brownies" class="project-picture">
