--- a/about.html
+++ b/about.html
@@ -30,10 +30,12 @@
 		<p> Another one of my favourite things is baking, which I try to do at least once a week. Shown below are some of my favourite creations.
 		
 		<div class="baking-row">
-			<img src="brownies1.jpg" alt="Brownies" class="baking3pic">
-			<img src="brownies2.jpg" alt="Brownies" class="baking3pic">
-			<img src="brownies3.jpg" alt="Brownies" class="baking3pic">
-			<br> <p> Brownies </p>
+    			<div class="image-container-baking">
+        			<img src="brownies1.jpg" alt="Brownies" class="baking3pic">
+        			<img src="brownies2.jpg" alt="Brownies" class="baking3pic">
+        			<img src="brownies3.jpg" alt="Brownies" class="baking3pic">
+    			</div>
+    			<p>Brownies</p>
 		</div>
     	</div>
 </body>
