--- a/about.html
+++ b/about.html
@@ -37,6 +37,72 @@
     			</div>
     			<p class="baking-text">Brownies</p>
 		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="bananas-tray.jpg" alt="Banana Muffins in Baking Tray" class="baking2pic">
+        			<img src="bananas.jpg" alt="Banana Muffins" class="baking2pic">
+    			</div>
+    			<p class="baking-text">Banana Chocolate Chip Muffins</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="lemon-tray.jpg" alt="Lemon Cupcakes in Baking Tray" class="baking2pic">
+        			<img src="lemons.jpg" alt="Lemon Cupcakes" class="baking2pic">
+    			</div>
+    			<p class="baking-text">Lemon Cupcakes</p>
+		</div>
+
+				<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="cupcakes.jpg" alt="Birthday Cupcakes" class="baking1pic">
+    			</div>
+    			<p class="baking-text">Birthday Cupcakes</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="applepie.jpg" alt="Lemon Cupcakes in Baking Tray" class="baking1pic">
+    			</div>
+    			<p class="baking-text">Apple Pie</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="CPP-closed.jpg" alt="Uncut Chicken Pot Pie" class="baking2pic">
+        			<img src="CPP-open.jpg" alt="Cut Chicken Pot Pie" class="baking2pic">
+    			</div>
+    			<p class="baking-text">Chicken Pot Pie</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="crepes.jpg" alt="Crepes" class="baking1pic">
+    			</div>
+    			<p class="baking-text">Crepes</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="pancakes.jpg" alt="Rootbeer Pancakes" class="baking1pic">
+    			</div>
+    			<p class="baking-text">MUG Rootbeer Pancakes with Rootbeer Syrup</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="gingersnaps.jpg" alt="Gingersnaps" class="baking1pic">
+    			</div>
+    			<p class="baking-text">Gingersnaps</p>
+		</div>
+
+		<div class="baking-row">
+   			 <div class="image-container">
+        			<img src="cookies.jpg" alt="Cookies" class="baking1pic">
+    			</div>
+    			<p class="baking-text">Chocolate Chip Cookies</p>
+		</div>
     	</div>
 </body>
 </html>
