--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 		<p> Another one of my favourite things is baking, which I try to do at least once a week. Shown below are some of my favourite creations.
 		
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="brownies1.jpg" alt="Brownies" class="baking3pic">
         			<img src="brownies2.jpg" alt="Brownies" class="baking3pic">
         			<img src="brownies3.jpg" alt="Brownies" class="baking3pic">
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="bananas-tray.jpg" alt="Banana Muffins in Baking Tray" class="baking2pic">
         			<img src="bananas.jpg" alt="Banana Muffins" class="baking2pic">
     			</div>
@@ -47,29 +47,29 @@
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="lemon-tray.jpg" alt="Lemon Cupcakes in Baking Tray" class="baking2pic">
         			<img src="lemons.jpg" alt="Lemon Cupcakes" class="baking2pic">
     			</div>
     			<p class="baking-text">Lemon Cupcakes</p>
 		</div>
 
-				<div class="baking-row">
-   			 <div class="image-container">
+		<div class="baking-row">
+   			 <div class="image-container-baking">
         			<img src="cupcakes.jpg" alt="Birthday Cupcakes" class="baking1pic">
     			</div>
     			<p class="baking-text">Birthday Cupcakes</p>
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="applepie.jpg" alt="Lemon Cupcakes in Baking Tray" class="baking1pic">
     			</div>
     			<p class="baking-text">Apple Pie</p>
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="CPP-closed.jpg" alt="Uncut Chicken Pot Pie" class="baking2pic">
         			<img src="CPP-open.jpg" alt="Cut Chicken Pot Pie" class="baking2pic">
     			</div>
@@ -77,28 +77,28 @@
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
-        			<img src="crepes.jpg" alt="Crepes" class="baking1pic">
+   			 <div class="image-container-baking">
+        			<img src="crepes.JPG" alt="Crepes" class="baking1pic">
     			</div>
     			<p class="baking-text">Crepes</p>
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="pancakes.jpg" alt="Rootbeer Pancakes" class="baking1pic">
     			</div>
     			<p class="baking-text">MUG Rootbeer Pancakes with Rootbeer Syrup</p>
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="gingersnaps.jpg" alt="Gingersnaps" class="baking1pic">
     			</div>
     			<p class="baking-text">Gingersnaps</p>
 		</div>
 
 		<div class="baking-row">
-   			 <div class="image-container">
+   			 <div class="image-container-baking">
         			<img src="cookies.jpg" alt="Cookies" class="baking1pic">
     			</div>
     			<p class="baking-text">Chocolate Chip Cookies</p>
